[Spigot] Fix jedis port to be an integer.